# democracy-simulator

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/engine/: citizen.rs  economy.rs  government.rs  mod.rs  simulation.rs  state.rs  tests.rs
src/ui/: app.rs  config_screen.rs  mod.rs  renderer.rs
